--- a/form.html
+++ b/form.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Personal Information Form</title>
+    <link rel="stylesheet" type="text/css" href="styles.css" />
+
     <style>
       * {
         margin: 0;
@@ -13,7 +15,11 @@
 
       body {
         font-family: "Poppins", sans-serif;
-        background-color: #f0f4f8;
+        background-color: #6b7fba;
+        height: 100vh;
+      }
+
+      .main-container {
         display: flex;
         justify-content: center;
         align-items: center;
@@ -81,7 +87,7 @@
         top: -10px;
         left: 0;
         font-size: 14px;
-        color: #007bff;
+        color: #000102;
         background: white;
         padding: 0 5px;
       }
@@ -109,32 +115,45 @@
     </style>
   </head>
   <body>
-    <div class="form-container">
-      <h2>Personal Information</h2>
-      <form>
-        <div class="input-group">
-          <input type="text" id="name" name="name" required />
-          <label for="name">Name</label>
-        </div>
-        <div class="input-group">
-          <input type="password" id="password" name="password" required />
-          <label for="password">Password</label>
-        </div>
-        <div class="input-group">
-          <select id="gender" name="gender" required>
-            <option value="" disabled selected></option>
-            <option value="male">Male</option>
-            <option value="female">Female</option>
-            <option value="other">Other</option>
-          </select>
-          <label for="gender">Gender</label>
-        </div>
-        <div class="input-group">
-          <textarea id="remarks" name="remarks"></textarea>
-          <label for="remarks">Remarks</label>
-        </div>
-        <button type="submit" class="submit-btn">Submit</button>
-      </form>
-    </div>
+    <nav class="navbar">
+      <ul class="nav-list">
+        <li class="nav-item">
+          <a href="/index.html">Personal Information</a>
+        </li>
+        <li class="nav-item"><a href="/table.html">Table</a></li>
+        <li class="nav-item">
+          <a style="background-color: #8096d0" href="/form.html">Form</a>
+        </li>
+      </ul>
+    </nav>
+    <section class="main-container">
+      <div class="form-container">
+        <h2 style="font-family: sans-serif">Personal Information</h2>
+        <form>
+          <div class="input-group">
+            <input type="text" id="name" name="name" required />
+            <label for="name">Name</label>
+          </div>
+          <div class="input-group">
+            <input type="password" id="password" name="password" required />
+            <label for="password">Password</label>
+          </div>
+          <div class="input-group">
+            <select id="gender" name="gender" required>
+              <option value="" disabled selected></option>
+              <option value="male">Male</option>
+              <option value="female">Female</option>
+              <option value="other">Other</option>
+            </select>
+            <label for="gender">Gender</label>
+          </div>
+          <div class="input-group">
+            <textarea id="remarks" name="remarks"></textarea>
+            <label for="remarks">Remarks</label>
+          </div>
+          <button type="submit" class="submit-btn">Submit</button>
+        </form>
+      </div>
+    </section>
   </body>
 </html>
